portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: NodePort   # Bisa juga LoadBalancer kalau di cloud
  selector:
    app: portainer
  ports:
    - protocol: TCP
      port: 9443
      targetPort: 9443
      nodePort: 30000  # Port untuk akses dari luar cluster
